# edn-parser

./: .gitignore  Makefile  README.md  edn-parser.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
examples/: sample.edn  test.js
src/EDN/: Parser.hs  Types.hs
src/EDN/CodeGen/: JavaScript.hs  TypeScript.hs
test/: Spec.hs
